tests/ui/type_checker/invalid/unknown_field.aru
struct User {
    age: int
}

func main() {
    let u: User = User { age: 10 }
    let x: int = u.name
}
